# document-qa-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
data/eval/: test_questions.json
data/sample_docs/: sample.md  sample.txt  sample_de.md  sample_de.txt
deploy/: main.py  requirements.txt
docs/: api-reference.md  setup-guide.md
src/docqa/: __init__.py
src/docqa/api/: endpoints.py  schemas.py
src/docqa/core/: config.py
src/docqa/evaluation/: __init__.py  metrics.py  runner.py  tracker.py
src/docqa/ingestion/: __init__.py  chunking.py  loaders.py
src/docqa/llm/: __init__.py  prompts.py  providers.py
src/docqa/retrieval/: __init__.py  chain.py
src/docqa/vectordb/: __init__.py  embeddings.py  language.py  store.py
tests/: test_api.py  test_evaluation.py  test_ingestion.py  test_language.py  test_prompts.py  test_retrieval.py  test_vectorstore.py
