[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-qa-system"
version = "0.1.0"
description = "Document QA System — retrieval-augmented generation for document Q&A"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Juan Ruiz Alonso"},
]
keywords = ["rag", "document-qa", "langchain", "llm", "vector-database", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=0.2,<1",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
    "langchain-chroma>=0.1",
    "chromadb>=0.4",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypdf>=4.0",
    "mlflow>=2.10",
    "streamlit>=1.30",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.7",
    "langdetect>=1.0",
]

[project.optional-dependencies]
huggingface = [
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docqa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
